force-app/main/default/objects/SK_Credit_Application__c/SK_Credit_Application__c.object-meta.xml
<CustomObject>
    <label>Credit Application</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>