force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>SK_Annual_Income__c</fullName>
    <label>Annual Income</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>