force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>SK_Applicant_Name__c</fullName>
    <label>Applicant Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>