force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_Application_Date__c</fullName>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>