force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Credit</fullName>
                <default>true</default>
                <label>New Credit</label>
            </value>
            <value>
                <fullName>Limit Increase</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>