force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Approval_Percentage__c.field-meta.xml
<CustomField>
    <fullName>SK_Approval_Percentage__c</fullName>
    <formula>IF(SK_Requested_Amount__c &gt; 0, (SK_Approved_Amount__c / SK_Requested_Amount__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>