force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>SK_Credit_Rating__c</fullName>
    <formula>IF(SK_Credit_Score__c &gt;= 750, "Excellent",
IF(SK_Credit_Score__c &gt;= 700, "Good",
IF(SK_Credit_Score__c &gt;= 650, "Fair",
IF(SK_Credit_Score__c &gt;= 600, "Poor", "Very Poor"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Rating</label>
    <type>Text</type>
</CustomField>