force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>SK_Credit_Score__c</fullName>
    <label>Credit Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>