force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Days_Since_Application__c.field-meta.xml
<CustomField>
    <fullName>SK_Days_Since_Application__c</fullName>
    <formula>TODAY() - SK_Application_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Application</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>