force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_Decision_Date__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>