force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Email__c.field-meta.xml
<CustomField>
    <fullName>SK_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>