force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Is_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>SK_Is_Existing_Customer__c</fullName>
    <label>Is Existing Customer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>