force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Is_Priority__c.field-meta.xml
<CustomField>
    <fullName>SK_Is_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Priority</label>
    <type>Checkbox</type>
</CustomField>