force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>