force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Phone__c.field-meta.xml
<CustomField>
    <fullName>SK_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>