force-app/main/default/objects/SK_Credit_Application__c/fields/SK_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_Requested_Amount__c</fullName>
    <label>Requested Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>