force-app/main/default/objects/SK_Credit_Application__c/listViews/All_My_Credit_Applications.listView-meta.xml
<ListView>
    <fullName>All_My_Credit_Applications</fullName>
    <columns>NAME</columns>
    <columns>SK_Applicant_Name__c</columns>
    <columns>SK_Status__c</columns>
    <columns>SK_Application_Type__c</columns>
    <columns>SK_Requested_Amount__c</columns>
    <columns>SK_Credit_Rating__c</columns>
    <columns>SK_Days_Since_Application__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All My Credit Applications</label>
</ListView>