force-app/main/default/objects/SK_Credit_Application__c/listViews/Approved_Credit_Applications.listView-meta.xml
<ListView>
    <fullName>Approved_Credit_Applications</fullName>
    <columns>NAME</columns>
    <columns>SK_Applicant_Name__c</columns>
    <columns>SK_Application_Type__c</columns>
    <columns>SK_Requested_Amount__c</columns>
    <columns>SK_Approved_Amount__c</columns>
    <columns>SK_Approval_Percentage__c</columns>
    <columns>SK_Decision_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SK_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Credit Applications</label>
</ListView>