force-app/main/default/objects/SK_Credit_Application__c/listViews/Limit_Increase_Credit_Applications.listView-meta.xml
<ListView>
    <fullName>Limit_Increase_Credit_Applications</fullName>
    <columns>NAME</columns>
    <columns>SK_Applicant_Name__c</columns>
    <columns>SK_Status__c</columns>
    <columns>SK_Requested_Amount__c</columns>
    <columns>SK_Is_Existing_Customer__c</columns>
    <columns>SK_Credit_Rating__c</columns>
    <columns>SK_Days_Since_Application__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SK_Application_Type__c</field>
        <operation>equals</operation>
        <value>Limit Increase</value>
    </filters>
    <label>Limit Increase Credit Applications</label>
</ListView>