force-app/main/default/objects/SK_Credit_Application__c/listViews/Rejected_Credit_Applications.listView-meta.xml
<ListView>
    <fullName>Rejected_Credit_Applications</fullName>
    <columns>NAME</columns>
    <columns>SK_Applicant_Name__c</columns>
    <columns>SK_Requested_Amount__c</columns>
    <columns>SK_Credit_Score__c</columns>
    <columns>SK_Credit_Rating__c</columns>
    <columns>SK_Decision_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SK_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Credit Applications</label>
</ListView>